@@ -4,6 +4,7 @@ import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseCookie;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
@@ -11,6 +12,7 @@ import org.springframework.security.oauth2.core.user.OAuth2User;
 import org.springframework.web.bind.annotation.*;
 import tf.tailfriend.user.config.JwtTokenProvider;
 import tf.tailfriend.user.config.OAuth2AttributeExtractor;
+import tf.tailfriend.user.config.UserPrincipal;
 import tf.tailfriend.user.entity.Users;
 import tf.tailfriend.user.entity.dto.LoginRequestDto;
 import tf.tailfriend.user.entity.dto.UserRegisterDto;
@@ -27,9 +29,9 @@ import java.util.Map;
 @RequiredArgsConstructor
 public class AuthController {
 
-    private final JwtTokenProvider jwtTokenProvider;
     private final UserService userService;
     private final AuthService authService;
+    private final JwtTokenProvider jwtTokenProvider;
 
     private static final Logger logger = LoggerFactory.getLogger(AuthController.class);
 
@@ -39,70 +41,98 @@ public class AuthController {
         logger.debug("📦 DTO received: {}", dto);
 
         // 유저 등록
-        userService.registerUser(dto);
+        Users savedUser = userService.registerUser(dto); // 반환값 Users로 변경
 
-        // 로그인 처리 → JWT 생성
-        String token = authService.login(new LoginRequestDto(dto.getSnsAccountId()));
+        String token = jwtTokenProvider.createToken(
+                savedUser.getId(),
+                savedUser.getSnsAccountId(),
+                savedUser.getSnsType().getId(),
+                false // 이제는 무조건 isNewUser=false
+        );
         logger.debug("🔐 Generated token: {}", token);
 
-        // ✅ JWT를 HttpOnly 쿠키로 추가
-        ResponseCookie cookie = ResponseCookie.from("accessToken", token)
-                .httpOnly(true)
-                .secure(false)
-                .path("/")
-                .maxAge(Duration.ofDays(1))
-                .sameSite("Lax")
-                .build();
-        response.addHeader("Set-Cookie", cookie.toString());
+        response.addHeader("Set-Cookie", createJwtCookie(token).toString());
+        response.addHeader("Set-Cookie", clearCookie("signupInfo").toString());
 
-        // ✅ signupInfo 쿠키 삭제
-        ResponseCookie clearSignupInfoCookie = ResponseCookie.from("signupInfo", "")
-                .httpOnly(false)
-                .secure(false)
-                .path("/")
-                .maxAge(0)
-                .sameSite("Lax")
-                .build();
-        response.addHeader("Set-Cookie", clearSignupInfoCookie.toString());
-
-        return ResponseEntity.ok(Collections.singletonMap("message", "회원가입 및 로그인 성공"));
+        return ResponseEntity.ok(Map.of("message", "회원가입 및 로그인 성공"));
     }
 
 
     @PostMapping("/api/auth/login")
-    public ResponseEntity<?> login(@RequestBody LoginRequestDto dto) {
-        logger.debug("Received login request: {}", dto);
+    public ResponseEntity<?> login(@RequestBody LoginRequestDto dto, HttpServletResponse response) {
+        logger.debug("📥 로그인 요청: {}", dto);
 
         String token = authService.login(dto);
-        logger.debug("Generated token: {}", token);
+        logger.debug("🔐 JWT 발급: {}", token);
 
-        return ResponseEntity.ok(Collections.singletonMap("token", token));
+        response.addHeader("Set-Cookie", createJwtCookie(token).toString());
+
+        return ResponseEntity.ok(Map.of("message", "로그인 성공"));
     }
 
 
-    @GetMapping("/oauth2/success")
-    public ResponseEntity<?> handleOAuth2Success(@AuthenticationPrincipal OAuth2User oAuth2User) {
-        Map<String, Object> attributes = oAuth2User.getAttributes();
+    @GetMapping("/api/auth/me")
+    public ResponseEntity<?> getCurrentUser(@AuthenticationPrincipal UserPrincipal user) {
+        if (user == null) {
+            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(Map.of("error", "Unauthorized"));
+        }
 
-        String email = OAuth2AttributeExtractor.getEmail(attributes);
-        String snsAccountId = OAuth2AttributeExtractor.getSnsAccountId(attributes);
-        Integer snsTypeId = OAuth2AttributeExtractor.getSnsTypeId(attributes);
+        return ResponseEntity.ok(buildUserInfo(user));
+    }
 
-        Users user = userService.findBySnsAccountId(snsAccountId).orElse(null);
-        Integer userId = user != null ? user.getId() : -1;
+    @PostMapping("/api/auth/logout")
+    public ResponseEntity<?> logout(HttpServletResponse response) {
+        response.addHeader("Set-Cookie", clearCookie("accessToken").toString());
+        return ResponseEntity.ok(Map.of("message", "로그아웃 완료"));
+    }
 
-        // JWT 생성
-        String token = jwtTokenProvider.createToken(userId, email, snsTypeId);
 
-        // 프론트에 필요한 정보 응답
+    @GetMapping("/api/auth/check")
+    public ResponseEntity<?> checkLogin(@AuthenticationPrincipal UserPrincipal user) {
+        if (user == null) {
+            return ResponseEntity.status(401).body(Map.of("loggedIn", false));
+        }
+
         Map<String, Object> response = new HashMap<>();
-        response.put("token", token);
-        response.put("email", email);
-        response.put("snsAccountId", snsAccountId);
-        response.put("snsTypeId", snsTypeId);
-        response.put("userId", userId);
+        response.put("isNewUser", user.getIsNewUser());
+
+        if (user.getIsNewUser()) {
+            response.put("email", user.getEmail());
+            response.put("snsTypeId", user.getSnsTypeId());
+        }
 
         return ResponseEntity.ok(response);
+    }
+
+    // 🔧 JWT 쿠키 생성
+    private ResponseCookie createJwtCookie(String token) {
+        return ResponseCookie.from("accessToken", token)
+                .httpOnly(true)
+                .secure(false) // ⚠️ 배포 시 true + HTTPS
+                .path("/")
+                .maxAge(Duration.ofDays(1))
+                .sameSite("Lax")
+                .build();
+    }
+
+    // 🔧 쿠키 삭제 (0초로 만료)
+    private ResponseCookie clearCookie(String name) {
+        return ResponseCookie.from(name, "")
+                .httpOnly(true)
+                .secure(false) // ⚠️ 배포 시 true + HTTPS
+                .path("/")
+                .maxAge(0)
+                .sameSite("Lax")
+                .build();
+    }
+
+    // 🔧 사용자 정보 응답 구조화
+    private Map<String, Object> buildUserInfo(UserPrincipal user) {
+        Map<String, Object> info = new HashMap<>();
+        info.put("userId", user.getUserId());
+        info.put("email", user.getEmail());
+        info.put("snsTypeId", user.getSnsTypeId());
+        return info;
     }
 
 
